<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.lanwen.jenkins</groupId>
    <artifactId>juseppe</artifactId>
    <version>1.1.2-SNAPSHOT</version>
    
    <modules>
        <module>juseppe-core</module>
        <module>juseppe-cli</module>
    </modules>
    
    <packaging>pom</packaging>


    <properties>
        <jetty.version>9.2.6.v20141205</jetty.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <slf4j.version>1.7.12</slf4j.version>
    </properties>

    <scm>
        <url>https://github.com/yandex-qatools/juseppe</url>
        <connection>scm:git:git://github.com/yandex-qatools/juseppe.git</connection>
        <developerConnection>scm:git:git@github.com:yandex-qatools/juseppe.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    
    <dependencyManagement>
         <dependencies>

             <dependency>
                 <groupId>ru.lanwen.jenkins</groupId>
                 <artifactId>juseppe-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             
             <!--https://github.com/qatools/properties-->
             <dependency>
                 <groupId>ru.qatools.commons</groupId>
                 <artifactId>properties</artifactId>
                 <version>2.0.RC5</version>
             </dependency>

             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.3.2</version>
             </dependency>

             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-server</artifactId>
                 <version>${jetty.version}</version>
             </dependency>

             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-servlet</artifactId>
                 <version>${jetty.version}</version>
             </dependency>

             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>

             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>

             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.3.1</version>
             </dependency>

             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
             </dependency>

             <!--for signer-->
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpkix-jdk15on</artifactId>
                 <version>1.54</version>
             </dependency>
             
             <dependency>
                 <groupId>bouncycastle</groupId>
                 <artifactId>bcprov-jdk15</artifactId>
                 <version>140</version>
             </dependency>

             <dependency>
                 <groupId>org.jenkins-ci</groupId>
                 <artifactId>crypto-util</artifactId>
                 <version>1.1</version>
             </dependency>

             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>1.9</version>
             </dependency>

             <dependency>
                 <groupId>org.kohsuke.stapler</groupId>
                 <artifactId>json-lib</artifactId>
                 <version>2.4-jenkins-1</version>
             </dependency>

             <!--https://github.com/airlift/airline-->
             <dependency>
                 <groupId>io.airlift</groupId>
                 <artifactId>airline</artifactId>
                 <version>0.7</version>
             </dependency>

             <!--TEST-->
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
                 <version>1.3</version>
                 <scope>test</scope>
             </dependency>

             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
                 <scope>test</scope>
             </dependency>

             <dependency>
                 <groupId>io.rest-assured</groupId>
                 <artifactId>rest-assured</artifactId>
                 <version>5.5.0</version>
                 <scope>test</scope>
             </dependency>
             
         </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <optimize>true</optimize>
                    <encoding>utf-8</encoding>
                    <release>17</release>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <preparationGoals>clean</preparationGoals>
                    <goals>install</goals>
                </configuration>
            </plugin>
            
        </plugins>
    </build>
    
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <configLocation>juseppe-core/src/test/resources/checkstyle-config.xml</configLocation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.1</version>
            </plugin>
        </plugins>
    </reporting>

    <repositories>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </pluginRepository>
    </pluginRepositories>

</project>